syntax = "proto3";

option csharp_namespace = "dotnet_grpc";

package todoit;

service ToDoIt {
    // Create
    rpc CreateToDo(CreateToDoRequest) returns (CreateToDoResponse) {}

    // Read Single
    rpc ReadTodo(ReadToDoRequest) returns (ReadToDoResponse) {}

    // Read list
    rpc ListTodo(GetAllRequest) returns (GetAllResponse) {}

    // Update
    rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) {}

    // Delete
    rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse) {}
}


// ---------- Create
message CreateToDoRequest {
    string title = 1;
    string description = 2;
}

message CreateToDoResponse {
    int32 id = 1;
}

// ---------- Get Single
message ReadToDoRequest {
    int32 id = 1;
}

message ReadToDoResponse {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string to_do_status = 4;
}

// ---------- Get All
message GetAllRequest {}

message GetAllResponse {
    repeated ReadToDoResponse to_do = 1;
}

// ---------- Update
message UpdateToDoRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string to_do_status = 4;
}

message UpdateToDoResponse {
    int32 id = 1;
}
  
// ---------- Delete
message DeleteToDoRequest {
    int32 id = 1;
}
  
message DeleteToDoResponse {
    int32 id = 1;
}